# minifyhtml

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
R/: extendr-wrappers.R  minify.R  minifyhtml-package.R
man/: minify.Rd  minifyhtml.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
